--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <title>Title</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/media.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <script type="text/javascript">
         const ws   = {{ .WS }};
@@ -11,6 +12,7 @@
         const host = {{ .HOST }};
     </script>
     <script defer type="text/javascript" src="/static/js/jquery.js"></script>
+    <script defer type="text/javascript" src="/static/js/popper.js"></script>
     <script defer type="text/javascript" src="/static/js/bootstrap.js"></script>
     <script defer type="text/javascript" src="/static/js/vue.js"></script>
     <script defer type="text/javascript" src="/static/js/vue-router.js"></script>
