append download, upload, install files

--- a/views/about.html
+++ b/views/about.html
@@ -19,6 +19,7 @@
                         <li>Framework vue.js: <a target="_blank" class="text-info" href="https://github.com/vuejs/vue">vue.git</a>;</li>
                         <li>Library jquery: <a target="_blank" class="text-info" href="https://github.com/jquery/jquery">jquery.git</a>;</li>
                         <li>Framework bootstrap: <a target="_blank" class="text-info" href="https://github.com/twbs/bootstrap">bootstrap.git</a>;</li>
+                        <li>Library popper-core: <a target="_blank" class="text-info" href="https://github.com/popperjs/popper-core">popper-core.git</a>;</li>
                     </ul>
                 </div>
             </div>
