--- a/views/login.html
+++ b/views/login.html
@@ -8,22 +8,22 @@
                 </div>
                 <div v-if="message.curr" class="text-center col-10 mx-auto">
                     <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-                       ${message.curr}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        ${message.curr}
                     </div>
                     <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-                       ${message.curr}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        ${message.curr}
                     </div>
                     <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-                       ${message.curr}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        ${message.curr}
                     </div>
                 </div>
                 <div class="text-center col-10 mx-auto">
@@ -34,7 +34,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
                         </div>
-                        <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-secondary w-100" @click="login()">Enter to account</button>
+                        <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="login()">Enter to account</button>
                     </form>
                 </div>
             </div>
