--- a/views/settings.html
+++ b/views/settings.html
@@ -3,34 +3,60 @@
     <h2 class="text-center">Settings</h2><br>
     <div v-if="message.curr" class="text-center mx-auto">
         <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
            ${message.curr}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
         </div>
         <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
            ${message.curr}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
         </div>
         <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
            ${message.curr}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
         </div>
     </div>
     <div class="text-center mx-auto">
+
+        <div class="text-center form-group">
+            <div class="w-100">
+                <button v-if="switcher=='download'"  @click="setswitch('download')" type="button" class="btn btn-danger w-100">Action</button>
+                <button v-else  @click="nullconn(), nullfile(), setswitch('download')" type="button" class="btn btn-secondary w-100">Install</button>
+            </div>
+        </div>
+
+        <div v-if="switcher=='download'" class="text-center form-group">
+            <form id="feedbackForm" class="text-center">
+                <div class="form-group w-100">
+                    <select v-model="conndata.hashname" class="browser-default custom-select text-light bg-secondary w-100">
+                        <option disabled value="">Choose hashname</option>
+                        <option v-for="hash in userdata.connects" v-on:click="archivelist(hash)" v-bind:value="hash">${hash}</option>
+                    </select>
+                </div>
+                <div class="form-group w-100">
+                    <select v-model="filedata.hash" class="browser-default custom-select text-light bg-secondary w-100">
+                        <option disabled value="">Choose filename</option>
+                        <option v-for="file in filelist" v-bind:value="file.hash">${file.name}</option>
+                    </select>
+                </div>
+                <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="installfile(conndata.hashname, filedata.name, filedata.hash)">Install</button>
+            </form>
+        </div>
+
         <div class="text-center form-group">
             <div class="form-group row">
                 <div class="col-md-6">
                     <button v-if="switcher=='connect'"  @click="setswitch('connect')" type="button" class="btn btn-danger w-100">Action</button>
-                    <button v-else  @click="nulldata(), setswitch('connect')" type="button" class="btn btn-secondary w-100">Connect</button>
+                    <button v-else  @click="nullconn(), setswitch('connect')" type="button" class="btn btn-secondary w-100">Connect</button>
                 </div>
                 <div class="col-md-6">
                     <button v-if="switcher=='disconnect'"  @click="setswitch('disconnect')" type="button" class="btn btn-danger w-100">Action</button>
-                    <button v-else  @click="nulldata(), setswitch('disconnect')" type="button" class="btn btn-secondary w-100">Disconnect</button>
+                    <button v-else  @click="nullconn(), setswitch('disconnect')" type="button" class="btn btn-secondary w-100">Disconnect</button>
                 </div>
             </div>
         </div>
@@ -47,12 +73,16 @@
         </div>
         <div v-if="switcher=='disconnect'" class="text-center form-group">
             <form id="feedbackForm" class="text-center">
-                <div class="form-group">
-                    <input type="text" class="form-control bg-dark text-light" name="name" placeholder="Hashname" v-model="conndata.hashname">
+                <div class="form-group w-100">
+                    <select v-model="conndata.hashname" class="browser-default custom-select text-light bg-secondary w-100">
+                        <option disabled value="">Choose hashname</option>
+                        <option v-for="hash in userdata.connects" v-bind:value="hash">${hash}</option>
+                    </select>
                 </div>
                 <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="disconnect()">Disconnect</button>
             </form>
         </div>
+
     </div>
 </div>
 {{ end }}
