--- a/views/signup.html
+++ b/views/signup.html
@@ -6,24 +6,33 @@
                 <div class="text-center col-12">
                     <h2>Account creation</h2>
                 </div>
+                <div v-if="!message.curr" class="text-center col-10 mx-auto">
+                    <div class="alert alert-warning" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        The server stores all user information. <br> 
+                        Be careful when logging in to the global network.
+                    </div>
+                </div>
                 <div v-if="message.curr" class="text-center col-10 mx-auto">
                     <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-                       ${message.curr}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        ${message.curr}
                     </div>
                     <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-                       ${message.curr}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        ${message.curr}
                     </div>
                     <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-                       ${message.curr}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        ${message.curr}
                     </div>
                 </div>
                 <div class="text-center col-10 mx-auto">
@@ -41,11 +50,11 @@
                             <textarea class="form-control bg-dark text-light" placeholder="PEM Private Key Format" v-model="userdata.private_key"></textarea>
                         </div>
                         <div class="form-group">
-                            <button v-if="!switcher" @click="setswitch('turn')" type="button" class="btn btn-success w-100">Upload Private Key</button>
-                            <button v-if="switcher" @click="setswitch('turn'), userdata.private_key=null" type="button" class="btn btn-danger w-100">Don't Upload Private Key</button>
+                            <button v-if="!switcher" @click="setswitch('turn')" type="button" class="btn btn-secondary w-100">Upload private key</button>
+                            <button v-if="switcher" @click="setswitch('turn'), userdata.private_key=null" type="button" class="btn btn-danger w-100">Don't upload private key</button>
                         </div>
                         <div class="form-group">
-                            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-secondary w-100" @click="signup()">Create account</button>
+                            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="signup()">Create account</button>
                         </div>
                     </form>
                 </div>
