--- a/views/index.html
+++ b/views/index.html
@@ -28,8 +28,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul v-if="authdata.token" class="navbar-nav">
-                        <li class="nav-item" @click="chat('null')">
-                            <router-link to="/network/chat" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Network</h5></router-link>
+                        <li class="nav-item">
+                            <router-link to="/network/" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Network</h5></router-link>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
@@ -87,11 +87,23 @@
                     <!-- NETWORK PAGE -->
                     {{ template "network_page" }}
 
+                    <!-- NETWORK / CHAT PAGE -->
+                    {{ template "chat_page" }}
+
                     <!-- NETWORK / SETTINGS PAGE -->
                     {{ template "settings_page" }}
 
+                    <!-- NETWORK / CONNECTIONS PAGE -->
+                    {{ template "connections_page" }}
+
                     <!-- NETWORK / CLIENT PAGE -->
                     {{ template "client_page" }}
+
+                    <!-- NETWORK / CLIENT / ARCHIVE PAGE -->
+                    {{ template "clientarchive_page" }}
+
+                    <!-- NETWORK / CLIENT / ARCHIVE / FILE PAGE -->
+                    {{ template "clientarchivefile_page" }}
 
                     <!-- HDVWHUHJJ PAGE -->
                     {{ template "hdvwhuhjj_page" }}
