--- a/views/signup.html
+++ b/views/signup.html
@@ -1,65 +1,57 @@
 {{ define "signup_page" }}
-<div v-if="opened=='signup'">
-    <div class="col-12 col-md-8 mx-auto">
-        <div class="bg-dark jumbotron">
-            <div class="row text-center">
-                <div class="text-center col-12">
-                    <h2>Account creation</h2>
-                </div>
-                <div v-if="!message.curr" class="text-center col-10 mx-auto">
-                    <div class="alert alert-warning" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        The server stores all user information. <br> 
-                        Be careful when logging in to the global network.
-                    </div>
-                </div>
-                <div v-if="message.curr" class="text-center col-10 mx-auto">
-                    <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        ${message.curr}
-                    </div>
-                    <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        ${message.curr}
-                    </div>
-                    <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        ${message.curr}
-                    </div>
-                </div>
-                <div class="text-center col-10 mx-auto">
-                    <form id="feedbackForm" class="text-center">
-                        <div class="form-group">
-                            <input type="text" class="form-control bg-dark text-light" name="name" placeholder="Username" v-model="userdata.username">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Repeat Password" v-model="userdata.password_repeat">
-                        </div>
-                        <div v-if="switcher" class="form-group">
-                            <textarea class="form-control bg-dark text-light" placeholder="PEM Private Key Format" v-model="userdata.private_key"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button v-if="!switcher" @click="setswitch('turn')" type="button" class="btn btn-secondary w-100">Upload private key</button>
-                            <button v-if="switcher" @click="setswitch('turn'), userdata.private_key=null" type="button" class="btn btn-danger w-100">Don't upload private key</button>
-                        </div>
-                        <div class="form-group">
-                            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="signup()">Create account</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+<div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='signup'">
+    <h2 class="text-center">Account creation</h2>
+    <div v-if="!message.curr" class="text-center col-10 mx-auto">
+        <div class="alert alert-warning" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            The server stores all user information. <br> 
+            Be careful when logging in to the global network.
         </div>
+    </div>
+    <div v-if="message.curr" class="text-center col-10 mx-auto">
+        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            ${message.curr}
+        </div>
+        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            ${message.curr}
+        </div>
+        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            ${message.curr}
+        </div>
+    </div>
+    <div class="text-center col-10 mx-auto">
+        <form id="feedbackForm" class="text-center">
+            <div class="form-group">
+                <input type="text" class="form-control bg-dark text-light" name="name" placeholder="Username" v-model="userdata.username">
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Repeat Password" v-model="userdata.password_repeat">
+            </div>
+            <div v-if="switcher" class="form-group">
+                <textarea class="form-control bg-dark text-light" placeholder="PEM Private Key Format" v-model="userdata.private_key"></textarea>
+            </div>
+            <div class="form-group">
+                <button v-if="!switcher" @click="setswitch('turn')" type="button" class="btn btn-secondary w-100">Upload private key</button>
+                <button v-if="switcher" @click="setswitch('turn'), userdata.private_key=null" type="button" class="btn btn-danger w-100">Don't upload private key</button>
+            </div>
+            <div class="form-group">
+                <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="signup()">Create account</button>
+            </div>
+        </form>
     </div>
 </div>
 {{ end }}
