--- a/views/home.html
+++ b/views/home.html
@@ -38,6 +38,25 @@
             <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                     <button class="btn btn-link text-info" type="button" data-toggle="collapse" data-target="#collapse8" aria-expanded="true" aria-controls="collapse8">
+                        <h5>Version 1.1.0s</h5>
+                    </button>
+                </h2>
+            </div>
+            <div id="collapse8" class="collapse show" aria-labelledby="heading8" data-parent="#accordionExample">
+                <div class="card-body">
+                    <ul class="lead text-light">
+                        <li>Added ability to transfer files;</li>
+                        <li>Added function to view archives of other users;</li>
+                        <li>Added functions to download and upload files from nodes;</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="card bg-dark">
+            <div class="card-header" id="headingOne">
+                <h2 class="mb-0">
+                    <button class="btn btn-link text-info" type="button" data-toggle="collapse" data-target="#collapse8" aria-expanded="true" aria-controls="collapse8">
                         <h5>Version 1.0.0s</h5>
                     </button>
                 </h2>
