--- a/views/index.html
+++ b/views/index.html
@@ -93,8 +93,8 @@
                     <!-- NETWORK / SETTINGS PAGE -->
                     {{ template "settings_page" }}
 
-                    <!-- NETWORK / CONNECTIONS PAGE -->
-                    {{ template "connections_page" }}
+                    <!-- NETWORK / CLIENTS PAGE -->
+                    {{ template "clients_page" }}
 
                     <!-- NETWORK / CLIENT PAGE -->
                     {{ template "client_page" }}
