--- a/views/network.html
+++ b/views/network.html
@@ -29,8 +29,8 @@
         </div>
         <div class="form-group row">
             <div class="col-md-6">
-                <router-link to="/network/connections">
-                    <button class="btn btn-secondary w-100" @click="connects()">Connections</button>
+                <router-link to="/network/clients">
+                    <button class="btn btn-secondary w-100" @click="allconnects()">Clients</button>
                 </router-link>
             </div>
             <div class="col-md-6">
