--- a/views/client.html
+++ b/views/client.html
@@ -22,18 +22,6 @@
         </div>
     </div>
 
-    <!-- <div class="form-group row">
-        <div class="col-md-6">
-            <select v-model="filedata.hash" class="browser-default custom-select text-light bg-secondary w-100">
-                <option disabled value="">Choose filename</option>
-                <option v-for="file in filelist" v-bind:value="file.hash">${file.name}</option>
-            </select>
-        </div>
-        <div class="col-md-6">
-            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="installfile(conndata.hashname, filedata.hash)">Install file</button>
-        </div>
-    </div> -->
-
     <div class="form-group row">
         <div class="col-md-3">
             <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
@@ -53,8 +41,8 @@ Public Key:
     <br>
     <div v-if="conndata.hashname!=authdata.hashname" class="form-group row">
         <div class="col-md-6">
-            <button v-if="conndata.connected" @click="disconnect(), client(conndata.hashname)" type="button" class="btn btn-danger w-100">Disconnect</button>
-            <button v-else @click="connect(), client(conndata.hashname)" type="button" class="btn btn-success w-100">Connect</button>
+            <button v-if="conndata.connected" @click="disconnect(conndata.hashname), conndata.connected=false" type="button" class="btn btn-danger w-100">Disconnect</button>
+            <button v-else @click="connect(conndata.address, conndata.public_key), conndata.connected=true" type="button" class="btn btn-success w-100">Connect</button>
         </div>
         <div class="col-md-6">
             <button v-if="switcher!='delete_chat'" @click="nulldata(), setswitch('delete_chat')" type="button" class="btn btn-danger w-100">Delete Chat</button>
